# serializer version: 1
# name: TestQueryZeroingSequence.test_zeroing_sequence_pool_from_query[event-event_type == 'EMERGENCY']
  dict({
    1: Timestamp('2023-08-03 00:00:00'),
    2: Timestamp('2023-09-21 00:00:00'),
    3: Timestamp('2023-03-22 00:00:00'),
    4: Timestamp('2023-06-09 00:00:00'),
    5: Timestamp('2023-03-22 00:00:00'),
    6: Timestamp('2023-02-06 00:00:00'),
    7: None,
    8: Timestamp('2023-09-21 00:00:00'),
    9: None,
    10: Timestamp('2023-05-07 00:00:00'),
  })
# ---
# name: TestQueryZeroingSequence.test_zeroing_sequence_pool_from_query[interval-medication == 'ANTIBIOTIC']
  dict({
    1: Timestamp('2023-01-20 00:00:00'),
    2: Timestamp('2023-01-05 00:00:00'),
    3: Timestamp('2023-04-15 00:00:00'),
    4: Timestamp('2023-05-25 00:00:00'),
    5: Timestamp('2023-09-06 00:00:00'),
    6: Timestamp('2023-05-18 00:00:00'),
    7: Timestamp('2023-03-14 00:00:00'),
    8: Timestamp('2023-01-26 00:00:00'),
    9: Timestamp('2023-05-06 00:00:00'),
    10: Timestamp('2023-04-05 00:00:00'),
  })
# ---
# name: TestQueryZeroingSequence.test_zeroing_sequence_pool_from_query[state-health_state == 'TREATMENT']
  dict({
    1: None,
    2: None,
    3: None,
    4: None,
    5: None,
    6: Timestamp('2023-03-09 00:00:00'),
    7: Timestamp('2023-05-28 00:00:00'),
    8: Timestamp('2023-12-16 00:00:00'),
    9: None,
    10: None,
  })
# ---
# name: TestQueryZeroingSequence.test_zeroing_single_sequence_from_query[event-event_type == 'EMERGENCY']
  Timestamp('2023-03-22 00:00:00')
# ---
# name: TestQueryZeroingSequence.test_zeroing_single_sequence_from_query[interval-medication == 'ANTIBIOTIC']
  Timestamp('2023-04-15 00:00:00')
# ---
# name: TestQueryZeroingSequence.test_zeroing_single_sequence_from_query[state-health_state == 'TREATMENT']
  np.datetime64('2023-01-01T00:00:00.000000000')
# ---
